k8s/apps/fe/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe
  namespace: prod-fe
spec:
  replicas: 2
